@@ -1,3 +1,7 @@
+2006-12-11  Brian Pepple  <bpepple@fedoraproject.org>
+
+	* C/xchat-gnome.xml: Add revision info for Joachim's changes.
+
 2006-12-10  Joachim Noreiko  <jnoreiko@yahoo.com>
 
   	* help/C/xchat-gnome.xml: 
